[package]
name = "clippy"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[dependencies]
axum = "0.6.4"
indoc = "2.0.0"
anyhow = "1.0.68"
backoff = "0.4.0"
tracing = "0.1.37"
dotenvy = "0.15.6"
futures = "0.3.26"
map-macro = "0.2.5"
reqwest = "0.11.14"
serde_json = "1.0.91"
zip-extract = "0.1.1"
async-openai = "0.6.0"
yaml-front-matter = "0.1.0"
uuid = { version = "1.3.0", features = ["v4"] }
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
tower-http = { version = "0.3.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
