[package]
name = "api"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
dotenvy = "0.15.6"
futures = "0.3.26"
map-macro = "0.2.5"
serde_json = "1.0.91"
tokio-stream = "0.1.11"
clippy = { path = "../clippy" }
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
tower-http = { version = "0.3.5", features = ["cors"] }
