[package]
name = "api"
version = "0.0.0"
edition = "2021"

[dependencies]
url = "2.3.1"
axum = "0.6.4"
pika = "0.1.3"
anyhow = "1.0.69"
dotenvy = "0.15.6"
futures = "0.3.26"
tracing = "0.1.37"
map-macro = "0.2.5"
thiserror = "1.0.38"
serde_json = "1.0.91"
tokio-stream = "0.1.11"
axum-derive-error = "0.1.0"
clippy = { path = "../clippy" }
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
tower-http = { version = "0.3.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", default-features = false, features = ["mysql", "migrations"] }

[build-dependencies]
chrono = "0.4.19"
