[package]
name = "cli"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
dotenvy = "0.15.6"
reqwest = "0.11.14"
serde_json = "1.0.91"
zip-extract = "0.1.1"
clippy = { path = "../clippy" }
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
