[package]
name = "cli"
edition = "2021"
version = "0.0.0"

[dependencies]
anyhow = "1.0.68"
spider = "1.19.8"
html2md = "0.2.14"
dotenvy = "0.15.6"
reqwest = "0.11.14"
serde_json = "1.0.91"
zip-extract = "0.1.1"
clippy = { path = "../clippy" }
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
readability = { git = "https://github.com/oknozor/readability", branch = "master" }
