[package]
name = "clippy"
version = "0.1.0"
edition = "2021"

[dependencies]
indoc = "2.0.0"
regex = "1.7.1"
anyhow = "1.0.68"
backoff = "0.4.0"
tracing = "0.1.37"
futures = "0.3.26"
map-macro = "0.2.5"
reqwest = "0.11.14"
serde_json = "1.0.91"
zip-extract = "0.1.1"
lazy_static = "1.4.0"
async-fn-stream = "0.2.0"
yaml-front-matter = "0.1.0"
uuid = { version = "1.3.0", features = ["v4"] }
tokio = { version = "1.25.0", features = ["rt"] }
serde = { version = "1.0.152", features = ["derive"] }
str_inflector = { version = "0.12.0", default-features = false }
async-openai = { git = "https://github.com/m1guelpf/async-openai", branch = "chatgpt" }
