[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
tl = "0.7.7"
url = "2.3.1"
anyhow = "1.0.69"
tracing = "0.1.37"
tokio-stream = "0.1.12"
futures-util = "0.3.26"
tokio = { version = "1.25.0", features = ["rt"] }
reqwest = { version = "0.11.14", features = ["gzip", "brotli"] }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread"] }
